--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -1,22 +1,100 @@
+
 body {
-    background-color: bisque;
+    background-color: whitesmoke;
+    margin: 0;
+    padding: 90px 20px 0;
+    box-sizing: border-box;
+        
 }
 
-.resaltdo{
+header{
+    position: fixed;
+    background-color: #076af0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 90px;
+}
+
+aside{
+    position: fixed;
+    padding: 10px;
+    background-color: bisque;
+    top: 90px;
+    left: 0;
+    bottom: 20px;
+    width: 20%;
+    
+}
+
+footer{
+    position: fixed;
+    padding: 10px;
+    background-color: black;
+    color: white;
+    text-align: center;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    
+}
+
+section{
+    overflow-y: scroll;
+    padding: 10px;
+    position: fixed;
+    background-color: aquamarine;
+    top: 90px;
+    left: 20%;
+    bottom: 20px;
+    width: 80%;
+    
+}
+
+.logo{
+    font-size: 30px;
+    font-weight: bold;
+    padding: 0 40px;
+    line-height: 90px;
+}
+
+.nav-link{
+    color: white;
+    text-decoration: none;
+}
+
+.nav{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+
+.nav-menu{
+    display: flex;
+    list-style: none;
+    margin-right: 40px;
+    
+}
+.nav-menu-item{
+    font-size: 18px;
+    margin: 0 10px;
+    line-height: 45px;
+}
+.nav-menu-link{
+    padding: 8px 12px;
+    transition: 0.3s;
+    
+}
+
+.nav-menu-link:hover{
+    background-color: blueviolet;
+    border-radius: 10px;
+}
+
+.resaltado{
     background-color: blueviolet;
     color: white;
-}
-
-nav a {
-    text-decoration: none;
-    background-color: black;
-    color: yellow;
-}
-
-nav a:hover {
-    background-color: blueviolet;
-    color: black;
-    font-size: 18px;
 }
 th {
     background-color: grey;
