--- a/src/main/resources/templates/categoria/listado.html
+++ b/src/main/resources/templates/categoria/listado.html
@@ -12,6 +12,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     </head>
     <body>
         <header th:replace="~{layout/plantilla :: header}"/>
+        
+        <section th:replace="~{categoria/fragmentos :: botonesAgregar}"/>
+        
+        <section th:replace="~{categoria/fragmentos :: agregarCategoria}"/>
+        
+        <section th:replace="~{categoria/fragmentos :: listadoCategorias}"/>
+        
         <footer th:replace="~{layout/plantilla :: footer}"/>
     </body>
 </html>
