--- a/src/main/resources/templates/producto/fragmentos.html
+++ b/src/main/resources/templates/producto/fragmentos.html
@@ -41,16 +41,21 @@
                             <div class="modal-body">
                                 <div class="mb-3">
                                     <label for="categoria">[[#{producto.categoria}]]</label>
-                                    <input type="number" class="form-control" name="IdCategoria" required="true"/>
+                                    <select class="form-select" aria-label="Default select example"
+                                            name="categoria.idCategoria">
+                                    <option th:each="c : ${categorias}"
+                                            th:value="${c.idCategoria}"
+                                            th:text="${c.descripcion}"></option>
+                                </select>
                                 </div>
-                                
+
                                 <div class="mb-3">
                                     <label for="descripcion">[[#{producto.descripcion}]]</label>
                                     <input type="text" class="form-control" name="descripcion" required="true"/>
                                 </div>
                                 <div class="mb-3">
                                     <label for="detalle">[[#{producto.detalle}]]</label>
-                                    <input type="text" class="form-control" name="detalle" required="true"/>
+                                    <textarea class="form-control" name="detalle" required="true"></textarea>
                                 </div>
                                 <div class="mb-3">
                                     <label for="precio">[[#{producto.precio}]]</label>
@@ -60,10 +65,16 @@
                                     <label for="existencias">[[#{producto.existencias}]]</label>
                                     <input type="number" class="form-control" name="existencias" required="true"/>
                                 </div>
+
                                 <div class="mb-3">
                                     <label for="imagen">[[#{producto.imagen}]]</label>
                                     <input class="form-control" type="file" name="imagenFile" onchange="readURL(this);"/>
                                     <img id="blah" src="#" alt="your image" height="200"/>
+
+                                </div>
+                                <div class="mb-3">
+                                    <label for="activo">[[#{producto.activo}]]</label>
+                                    <input class="form-check-input" type="checkbox" name="activo" required="true"/>
                                 </div>
                             </div>
                             <div class="modal-footer">
@@ -89,6 +100,10 @@
                                     <thead class="table-dark">
                                         <tr><th>#</th>
                                             <th>[[#{producto.descripcion}]]</th>
+                                            <th>[[#{producto.precio}]]</th>
+                                            <th>[[#{producto.existencias}]]</th>
+                                            <th>[[#{producto.total}]]</th>
+                                            <th>[[#{producto.categoria}]]</th>
                                             <th>[[#{producto.activo}]]</th>
                                             <th></th></tr>
                                     </thead>
@@ -96,6 +111,12 @@
                                         <tr th:each="producto, contador : ${productos}">
                                             <td>[[${contador.count}]]</td>
                                             <td>[[${producto.descripcion}]]</td>
+                                            <td class="text-end">[[${producto.precio}]]</td>
+                                            <td class="text-center">[[${producto.existencias}]]</td>
+                                            <td class="text-end">[[${producto.precio*producto.existencias}]]</td>
+                                            <td>[[${producto.categoria.descripcion}]]</td>
+
+
                                             <td th:text="${producto.activo} ? 'Activa' : 'Inactiva'" />
                                             <td><a th:href="@{/producto/eliminar/}+${producto.idProducto}"
                                                    class="btn btn-danger">
@@ -145,11 +166,15 @@
                                                 <h4>[[#{accion.actualizar}]]</h4>
                                             </div>
                                             <div class="card-body">
+                                                
                                                 <div class="mb-3">
                                                     <label for="categoria">[[#{producto.categoria}]]</label>
-                                                    <input type="number" class="form-control" 
-                                                           name="idCategoria" th:field="*{idCategoria}"
-                                                           required="true">
+                                                    <select class="form-select" aria-label="Default select example"
+                                                            name="categoria.idCategoria">
+                                                        <option th:each="c : ${categorias}"
+                                                                th:value="${c.idCategoria}"
+                                                                th:text="${c.descripcion}"></option>
+                                                    </select>
                                                 </div>
                                                 <div class="mb-3">
                                                     <label for="descripcion">[[#{producto.descripcion}]]</label>
@@ -157,7 +182,7 @@
                                                            name="descripcion" th:field="*{descripcion}"
                                                            required="true">
                                                 </div>
-                                                
+
                                                 <div class="mb-3">
                                                     <label for="detalle">[[#{producto.detalle}]]</label>
                                                     <input type="text" class="form-control" 
@@ -170,20 +195,25 @@
                                                            name="precio" th:field="*{precio}"
                                                            required="true">
                                                 </div>
-                                                
+
                                                 <div class="mb-3">
                                                     <label for="existencias">[[#{producto.existencias}]]</label>
                                                     <input type="number" class="form-control" 
                                                            name="existencias" th:field="*{existencias}"
                                                            required="true">
                                                 </div>
-                                                
+
                                                 <div class="mb-3">
                                                     <label for="imagen">[[#{producto.Imagen}]]</label>
                                                     <input class="form-control" type="file" name="imagenFile"
                                                            onchange="readURL(this);" />
                                                     <img id="blah" th:src="@{${producto.rutaImagen}}" alt="your image" height="200"/>
                                                 </div>
+                                                <div class="mb-3">
+                                                    <label for="activo">[[#{producto.activo}]]</label>
+                                                    <input class="form-check-input" type="checkbox" name="activo" required="true"/>
+                                                </div>
+
                                             </div>
                                         </div>
                                     </div>
