--- a/src/main/resources/templates/pruebas/listado.html
+++ b/src/main/resources/templates/pruebas/listado.html
@@ -9,6 +9,10 @@
     </head>
     <body>
         <header th:replace="~{layout/plantilla :: header}"/>
+        
+        <section th:replace="~{pruebas/fragmentos :: categoriasTabs}"/>
+        <section th:replace="~{producto/fragmentos :: listadoProductos}"/>
+        
         <footer th:replace="~{layout/plantilla :: footer}"/>
     </body>
 </html>
